// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdditionalMessage does not render if no additionalMessage 1`] = `null`;

exports[`AdditionalMessage renders with props 1`] = `
<h5>
  test
</h5>
`;

exports[`ContactLink renders 1`] = `
<a
  href="//rock.newspring.cc/workflows/152?Topic=Stewardship"
  rel="noopener noreferrer"
  target="_blank"
>
  contact us
</a>
`;

exports[`ContactUs renders 1`] = `
<p
  className="test-dark-tertiary text-left"
>
  <em>
    If you have any questions please call our Finance Team at 864-965-9990 or
     
    <a
      href="//rock.newspring.cc/workflows/152?Topic=Stewardship"
      rel="noopener noreferrer"
      target="_blank"
    >
      contact us
    </a>
     
    and someone will be happy to assist you.
  </em>
</p>
`;

exports[`CreateAccountFromGuest does not render if not guest 1`] = `null`;

exports[`CreateAccountFromGuest renders with props 1`] = `
<div>
  <p
    className="text-left"
  >
    If you would like to view your giving history, make it easier to give, and more, create a NewSpring Account!
  </p>
  <button
    className="btn one-whole push-bottom"
    onClick={[Function]}
  >
    Create Account
  </button>
</div>
`;

exports[`OneTimeThanks does not render if schedule 1`] = `null`;

exports[`OneTimeThanks renders with props 1`] = `
<p
  className="text-left"
>
  Thank you for your contribution of 
  12
   to NewSpring Church. We will email a receipt to 
  test@test.com
</p>
`;

exports[`ScheduleThanks does not render if no schedule 1`] = `null`;

exports[`ScheduleThanks renders with props 1`] = `
<p
  className="text-left"
>
  Thank you for your contribution of 
  12
   
  starting on 
  Dec 12, 1912
   
  to NewSpring Church.
</p>
`;

exports[`Success renders with props 1`] = `
<div
  className="soft soft-double-ends push-double-top@anchored one-whole text-center"
>
  <div
    className="push-double-top"
  >
    <svg
      height="61px"
      version="1.1"
      viewBox="0 0 60 61"
      width="60px"
    >
      <g
        fill="none"
        fillRule="evenodd"
        stroke="none"
        strokeWidth="1"
      >
        <g
          fill="#6BAC43"
          transform="translate(-90.000000, -159.000000)"
        >
          <g
            transform="translate(90.000000, 159.903000)"
          >
            <path
              d="M25.9570657,38.8180789 L26.6666667,39.5327125 L27.3762676,38.8180789 L40.709601,25.390183 L41.4092427,24.6855792 L40.709601,23.9809754 L38.0429343,21.2953962 L37.3333333,20.5807626 L36.6237324,21.2953962 L25.9570657,32.037713 L27.3762676,32.037713 L23.3762676,28.0093442 L22.6666667,27.2947106 L21.9570657,28.0093442 L19.290399,30.6949234 L18.5907573,31.3995272 L19.290399,32.104131 L25.9570657,38.8180789 L25.9570657,38.8180789 Z"
            />
            <path
              d="M30,54 L30,54 C43.254834,54 54,43.254834 54,30 C54,16.745166 43.254834,6 30,6 C16.745166,6 6,16.745166 6,30 C6,43.254834 16.745166,54 30,54 L30,54 Z M30,60 L30,60 C13.4314575,60 0,46.5685425 0,30 C0,13.4314575 13.4314575,0 30,0 C46.5685425,0 60,13.4314575 60,30 C60,46.5685425 46.5685425,60 30,60 L30,60 Z"
            />
          </g>
        </g>
      </g>
    </svg>
    <h3
      className="text-primary push-ends"
    >
      Success!
    </h3>
    <p
      className="text-left"
    >
      Thank you for your contribution of 
      12
       to NewSpring Church. We will email a receipt to 
      test@test.com
    </p>
    <p
      className="test-dark-tertiary text-left"
    >
      <em>
        If you have any questions please call our Finance Team at 864-965-9990 or
         
        <a
          href="//rock.newspring.cc/workflows/152?Topic=Stewardship"
          rel="noopener noreferrer"
          target="_blank"
        >
          contact us
        </a>
         
        and someone will be happy to assist you.
      </em>
    </p>
  </div>
</div>
`;
